--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,10 @@
     height:100%;
     overflow: hidden;
 }
+
+@media screen and (max-width: 800px) {
+    .app {
+        display: block;
+        overflow: auto;
+    }
+}
