--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -1,5 +1,6 @@
 .sidebar {
     max-width: 460px;
+    min-width: 460px;
     width: 100%;
     height: 100%;
     background: var(--sidebar-bg-color);
@@ -9,4 +10,12 @@
     position: relative;
 }
 
-
+@media screen and (max-width: 800px) {
+    .sidebar {
+        max-width: 100%;
+        min-width: 315px;
+        overflow: hidden;
+        height: auto;
+        min-height:100%;
+    }
+}
