--- a/src/components/sidebar/locationSearch/LocationSearch.css
+++ b/src/components/sidebar/locationSearch/LocationSearch.css
@@ -10,6 +10,12 @@
     padding: 0px 20px;
 }
 
+@media screen and (max-width: 800px) {
+    .location_search {
+        width: 100%;
+    }
+}
+
 .location_search__header {
     height: 50px;
     display: flex;
