--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -53,3 +53,13 @@
     background: var(--text-grey);
     color: var(--text-dark);
 }
+
+.main__footer {
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    color: var(--text-grey);
+    margin: 30px 0px;
+}
